* [Lab4]: Fix header spacings

--- a/Lab4/index.css
+++ b/Lab4/index.css
@@ -20,15 +20,9 @@
     justify-content: space-between;
 }
 
-.site-header-section-container, .site-header-section-separators {
+.site-header-section-container {
     grid-column: 1;
     grid-row: 1;
-}
-
-.site-header-section-separators {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
 }
 
 .site-header-section-name {
@@ -68,15 +62,9 @@
     align-items: center;
 }
 
-.site-footer-section-container, .site-footer-section-separators {
+.site-footer-section-container {
     grid-column: 1;
     grid-row: 1;
-}
-
-.site-footer-section-separators {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
 }
 
 .site-footer-section-name {
